--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,54 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "bike-obsessed-llm"
+version = "0.1.0"
+description = "Mechanistic interpretability research on bike obsession in language models"
+authors = [{name = "Brian Cosgrove", email = "bcosgrove@example.com"}]
+readme = "README.md"
+license = {text = "MIT"}
+requires-python = ">=3.8"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+]
+dependencies = [
+    "torch>=2.0.0,<3.0.0",
+    "transformers>=4.30.0,<5.0.0",
+    "huggingface-hub>=0.15.0,<1.0.0",
+    "requests>=2.28.0",
+    "urllib3>=1.26.0",
+    "certifi>=2023.0.0",
+    "accelerate>=0.20.0",
+    "typeguard",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "black>=23.0.0",
+    "flake8>=6.0.0",
+    "flake8-import-order>=0.18.0",
+]
+
+[project.urls]
+Homepage = "https://github.com/bcosgrove/bike-obsessed-llm"
+Repository = "https://github.com/bcosgrove/bike-obsessed-llm.git"
+Issues = "https://github.com/bcosgrove/bike-obsessed-llm/issues"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [tool.black]
 line-length = 88
 target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
@@ -20,7 +71,7 @@ extend-exclude = '''
 '''
 
 [tool.pytest.ini_options]
-testpaths = ["evals", "test_*.py"]
+testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
