--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,9 @@ dependencies = [
 dev = [
     "pytest>=7.0.0",
     "black>=23.0.0",
+    "isort>=5.0.0",
     "flake8>=6.0.0",
-    "flake8-import-order>=0.18.0",
+    "flake8-isort>=6.0.0",
 ]
 
 [project.urls]
@@ -48,6 +49,14 @@ Issues = "https://github.com/bcosgrove/bike-obsessed-llm/issues"
 
 [tool.flake8]
 extend-ignore = ["E203"]  # Black conflicts with E203 (whitespace before ':')
+
+# Configure flake8-isort to match isort settings
+[tool.flake8.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 88
+known_first_party = ["bike_obsessed_llm"]
+force_sort_within_sections = true
 
 [tool.setuptools.packages.find]
 where = ["src"]
@@ -72,6 +81,13 @@ extend-exclude = '''
   | dist
 )/
 '''
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 88
+known_first_party = ["bike_obsessed_llm"]
+force_sort_within_sections = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
